--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -8,7 +8,9 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE'
-    //compile 'org.slf4j:slf4j-api:1.7.21'
+    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0'
 
-    testCompile 'junit:junit:4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '1.2.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
