--- a/src/backend/gradle/wrapper/gradle-wrapper.properties
+++ b/src/backend/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Mar 13 22:43:38 CET 2017
+#Fri Apr 21 21:00:26 CEST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
