--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
