--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "webpack --progress",
     "build:prod": "webpack -p --progress",
+    "start": "http-server ./dist -a 0.0.0.0 -p 9000",
     "postinstall": "typings install"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "css-loader": "0.27.3",
     "file-loader": "0.10.1",
     "html-webpack-plugin": "2.28.0",
+    "http-server": "^0.9.0",
     "resolve-url-loader": "2.0.2",
     "style-loader": "0.13.2",
     "ts-loader": "2.0.1",
