--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -28,8 +28,10 @@
     "zone.js": "^0.7.7"
   },
   "devDependencies": {
+    "@types/node": "^7.0.13",
     "css-loader": "^0.27.3",
     "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "resolve-url-loader": "^2.0.2",
     "style-loader": "^0.13.2",
