--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rso-eres3",
-  "version": "0.0.1",
-  "repository": "https://github.com/peku33/rso-eres3",
+  "name": "ERES",
+  "version": "3.0.0",
+  "private": true,
   "scripts": {
     "build": "webpack --progress",
     "build:prod": "webpack -p --progress",
@@ -11,33 +11,30 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "^2.4.8",
-    "@angular/compiler": "^2.4.8",
-    "@angular/core": "^2.4.8",
-    "@angular/forms": "^2.4.9",
-    "@angular/http": "^2.4.8",
-    "@angular/platform-browser": "^2.4.8",
-    "@angular/platform-browser-dynamic": "^2.4.8",
-    "@angular/router": "^3.4.8",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.21",
-    "bootstrap": "^4.0.0-alpha.6",
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.2.0",
-    "tether": "^1.4.0",
-    "zone.js": "^0.7.7"
+    "@angular/common": "latest",
+    "@angular/compiler": "latest",
+    "@angular/core": "latest",
+    "@angular/forms": "latest",
+    "@angular/http": "latest",
+    "@angular/platform-browser": "latest",
+    "@angular/platform-browser-dynamic": "latest",
+    "@angular/router": "latest",
+    "@angular/upgrade": "latest",
+    "core-js": "latest",
+    "reflect-metadata": "latest",
+    "rxjs": "latest",
+    "zone.js": "latest",
+    "serve-static": "latest",
+    "finalhandler": "latest",
+    "websocket": "latest"
   },
   "devDependencies": {
-    "css-loader": "^0.27.3",
-    "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.28.0",
-    "resolve-url-loader": "^2.0.2",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^2.0.1",
-    "typescript": "^2.2.1",
-    "typings": "^2.1.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "typescript": "latest",
+    "typings": "latest",
+    "webpack": "latest",
+    "awesome-typescript-loader": "latest",
+    "angular2-template-loader": "latest",
+    "raw-loader": "latest",
+    "copy-webpack-plugin": "latest"
   }
 }
