--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,13 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "lib": ["es6", "dom"],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
-  }
+	"compilerOptions":
+	{
+		"allowJs": false,
+		"forceConsistentCasingInFileNames": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"target": "es6",
+		"module": "commonjs"
+	},
+	"exclude":
+	[
+		"node_modules"
+	]
 }
