--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,37 +3,51 @@
   "version": "0.0.1",
   "repository": "https://github.com/peku33/rso-eres3",
   "scripts": {
-    "build": "webpack --progress",
-    "build:prod": "webpack -p --progress",
-    "postinstall": "typings install"
+    "cleanup": "rimraf src/app/**/*.ngfactory.ts src/app/**/*.ngstyle.ts src/app/**/*.ngsummary.json build dist",
+    "explorer": "source-map-explorer ./dist/main.bundle.js ./dist/main.bundle.js.map",
+    "ngc": "ngc",
+    "serve": "http-server ./dist -a 0.0.0.0 -p 9000",
+    "start": "npm run cleanup && npm run ngc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
+    "start:prod": "npm run cleanup && npm run ngc && npm run build && npm run serve",
+    "build": "npm run cleanup && npm run ngc && webpack --config webpack.aot.config.js -p",
+    "deploy": "gh-pages -d dist",
+    "aot": "npm run cleanup && npm run ngc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
+    "jit": "npm run cleanup && webpack-dev-server --config webpack.jit.config.js"
   },
   "dependencies": {
-    "@angular/common": "^2.4.8",
+    "@angular/common": "^2.4.10",
     "@angular/compiler": "^2.4.8",
     "@angular/core": "^2.4.8",
-    "@angular/forms": "^2.4.9",
-    "@angular/http": "^2.4.8",
     "@angular/platform-browser": "^2.4.8",
     "@angular/platform-browser-dynamic": "^2.4.8",
     "@angular/router": "^3.4.8",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.21",
-    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.2.0",
-    "tether": "^1.4.0",
     "zone.js": "^0.7.7"
   },
   "devDependencies": {
-    "css-loader": "^0.27.3",
-    "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.28.0",
-    "resolve-url-loader": "^2.0.2",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^2.0.1",
-    "typescript": "^2.2.1",
-    "typings": "^2.1.0",
-    "url-loader": "^0.5.8",
+    "@angular/compiler-cli": "^4.1.0",
+    "@angular/platform-server": "^4.1.0",
+    "@types/node": "^7.0.14",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.1.2",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
+    "chokidar": "^1.6.1",
+    "concurrently": "^3.4.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "gh-pages": "^0.12.0",
+    "http-server": "^0.9.0",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
+    "source-map-explorer": "^1.3.3",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
+    "typescript": "^2.0.10",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
