--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
     
     compile 'mysql:mysql-connector-java:6.0.6'
+    compile 'org.slf4j:1.6.1'
     compile group: 'com.google.guava', name: 'guava', version: '21.0'
 
     testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE'
