Added externalized security configuration for testing purposes

--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
+
+app.security.requireAuthentication=true
+app.security.enableCSRFProtection=false
