Developement dependencies version bump

--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -11,13 +11,13 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.2.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-security:1.5.2.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:+'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:+'
+    compile 'org.springframework.boot:spring-boot-starter-security:+'
     
     compile 'mysql:mysql-connector-java:+'
     compile group: 'com.google.guava', name: 'guava', version: '+'
 	compile group: 'org.assertj', name: 'assertj-core', version: '+'
 
-    testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:+'
 }
