--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,9 +18,11 @@
     "@angular/common": "^2.4.10",
     "@angular/compiler": "^2.4.8",
     "@angular/core": "^2.4.8",
+    "@angular/http": "^4.1.1",
     "@angular/platform-browser": "^2.4.8",
     "@angular/platform-browser-dynamic": "^2.4.8",
     "@angular/router": "^3.4.8",
+    "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
     "zone.js": "^0.7.7"
