--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 
 app.security.requireAuthentication=true
+app.security.checkPermissions=true
 app.security.enableCSRFProtection=false
