--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.4.8",
     "@angular/platform-browser-dynamic": "^2.4.8",
     "@angular/router": "^3.4.8",
+    "@angular/http" : "^2.4.8",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
     "zone.js": "^0.7.7"
