--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -11,7 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "outDir": "./build",
-    "rootDir": "./src/app",
+    "rootDir": "./",
     "skipLibCheck": true,
     "typeRoots": [ "./node_modules/@types" ],
     "types": [
