--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,31 +11,32 @@
     "start:prod": "npm run cleanup && npm run ngc && npm run build && npm run serve",
     "build": "npm run cleanup && npm run ngc && webpack --config webpack.aot.config.js -p",
     "deploy": "gh-pages -d dist",
-    "aot": "npm run cleanup && npm run ngc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
+    "aot": "npm run cleanup && npm run tsc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
     "jit": "npm run cleanup && webpack-dev-server --config webpack.jit.config.js"
   },
   "dependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.8",
-    "@angular/core": "^2.4.8",
-    "@angular/platform-browser": "^2.4.8",
-    "@angular/platform-browser-dynamic": "^2.4.8",
-    "@angular/router": "^3.4.8",
-    "@angular/http" : "^2.4.8",
+    "@angular/animations": "^4.1.0",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/core": "^4.1.0",
+    "@angular/forms": "^4.1.0",
+    "@angular/http": "^4.1.0",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-browser-dynamic": "^4.1.0",
+    "@angular/router": "^4.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
-    "zone.js": "^0.7.7"
+    "zone.js": "^0.7.8"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.1.0",
-    "@angular/platform-server": "^4.1.0",
+    "@angular/compiler-cli": "^4.1.1",
+    "@angular/platform-server": "^4.1.1",
     "@types/node": "^7.0.14",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
     "chokidar": "^1.6.1",
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -48,7 +49,7 @@
     "source-map-explorer": "^1.3.3",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
-    "typescript": "^2.0.10",
+    "typescript": "^2.3.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
