--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "repository": "https://github.com/peku33/rso-eres3",
   "scripts": {
-    "cleanup": "rimraf src/app/**/*.ngfactory.ts src/app/**/*.ngstyle.ts src/app/**/*.ngsummary.json build dist",
+    "cleanup": "rimraf src/app/**/*.ngfactory.ts src/app/**/*.ngstyle.ts src/app/**/*.ngsummary.json  src/app/**/**/*.ngfactory.ts src/app/**/**/*.ngstyle.ts src/app/**/**/*.ngsummary.json build dist",
     "explorer": "source-map-explorer ./dist/main.bundle.js ./dist/main.bundle.js.map",
     "ngc": "ngc",
     "serve": "http-server ./dist -a 0.0.0.0 -p 9000",
@@ -26,6 +26,7 @@
     "@angular/router": "^4.1.0",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
+    "material-design-lite": "^1.3.0",
     "rxjs": "^5.2.0",
     "zone.js": "^0.7.8"
   },
