--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
 COPY . /usr/eres3/backend/
 WORKDIR /usr/eres3/backend/
-RUN ./gradlew build
+RUN ./gradlew build -x test
 CMD [ "./gradlew", "run" ]
