--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:+'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:+'
     compile 'org.springframework.boot:spring-boot-starter-security:+'
+    compile 'org.springframework.boot:spring-boot-configuration-processor:+'
     
     compile 'mysql:mysql-connector-java:+'
     compile group: 'com.google.guava', name: 'guava', version: '+'
