--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -37,6 +37,6 @@
   },
   "angularCompilerOptions": {
     "genDir": ".",
-    "entryModule": "src/app/modules/main.module#MainModule"
+    "entryModule": "src/app/modules/app.module#AppModule"
   }
 }
