--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "^4.1.0",
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/router": "^4.1.0",
+    "@types/lodash": "^4.14.64",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "material-design-lite": "^1.3.0",
     "rxjs": "^5.2.0",
     "zone.js": "^0.7.8"
