Fixed refresh bug, during style changes implementation

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,7 +6,7 @@
     "cleanup": "rimraf src/app/**/*.ngfactory.ts src/app/**/*.ngstyle.ts src/app/**/*.ngsummary.json  src/app/**/**/*.ngfactory.ts src/app/**/**/*.ngstyle.ts src/app/**/**/*.ngsummary.json build dist",
     "explorer": "source-map-explorer ./dist/main.bundle.js ./dist/main.bundle.js.map",
     "ngc": "ngc",
-    "serve": "http-server ./dist -a 0.0.0.0 -p 9000",
+    "serve": "node server.js",
     "start": "npm run cleanup && npm run ngc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
     "start:prod": "npm run cleanup && npm run ngc && npm run build && npm run serve",
     "build": "npm run cleanup && npm run ngc && webpack --config webpack.aot.config.js -p",
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.14.64",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
+    "gzippo": "^0.2.0",
     "lodash": "^4.17.4",
     "material-design-lite": "^1.3.0",
     "rxjs": "^5.2.0",
