--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -30,6 +30,7 @@
     "gzippo": "^0.2.0",
     "lodash": "^4.17.4",
     "material-design-lite": "^1.3.0",
+    "morgan": "^1.8.2",
     "rxjs": "^5.2.0",
     "zone.js": "^0.7.8"
   },
