--- a/src/db/my.cnf
+++ b/src/db/my.cnf
@@ -2,6 +2,8 @@
 ndbcluster
 ndb-connectstring=man1.ndb,man2.ndb
 default_storage_engine=ndbcluster
+character-set-server=utf8
+collation-server=utf8_general_ci
 
 [mysql_cluster]
 ndb-connectstring=man1.ndb,man2.ndb
